--- a/book.bib
+++ b/book.bib
@@ -90,3 +90,14 @@
   year={2004},
   publisher={Cambridge university press}
 }
+
+@article{hoerl1970ridge,
+  title={Ridge regression: Biased estimation for nonorthogonal problems},
+  author={Hoerl, Arthur E and Kennard, Robert W},
+  journal={Technometrics},
+  volume={12},
+  number={1},
+  pages={55--67},
+  year={1970},
+  publisher={Taylor \& Francis}
+}
