--- a/03-linear.Rmd
+++ b/03-linear.Rmd
@@ -20,7 +20,14 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 
 ```{r include = FALSE}
-  knitr::opts_chunk$set(fig.dim = c(8, 6), out.width = "60%", fig.align = 'center')
+  options(width = 100)
+  knitr::opts_knit$set(global.par = TRUE)
+  knitr::opts_chunk$set(collapse = TRUE, fig.dim = c(6, 6), 
+                        out.width = "45%", fig.align = 'center')
+```
+```{r include = FALSE}
+  par(bg="transparent")
+  par(mar=c(2,2,2,2))
 ```
 
 # Linear Regression and Model Selection
